classDiagram
    class EstacionDePeaje {
        +int numeroDeEstacion
        +string nombre
        +string ubicacion

        +void generarReporteRecaudacionDiaria()
        +void imprimirReporte()
        +void guardarReportePDF()
        +void enviarReporteEmail()
    }

    class CasillaDePeaje {
        +int numeroDeCasilla
        +string sentidoDeCobro
        -int numeroDeEstacion

        +void asignarTurno(TurnoDeTrabajo turno)
        +Ticket generarTicket(TipoVehiculo vehiculo)
    }

    class Operador {
        +int idOperador
        +string nombre
        +string apellido
        +string telefono
        -string direccion

        +void iniciarTurno(TurnoDeTrabajo turno)
        +void cerrarTurno(TurnoDeTrabajo turno)
    }

    class TurnoDeTrabajo {
        +int idTurno
        +DateTime fechaHoraDeInicio
        +DateTime fechaHoraDeFin
        -float montoDeCambioEntregado
        -int idOperador
        -int numeroDeCasilla
        +float plataInicial
        +float plataFinal
        -int numeroDeEstacion

        +void registrarInicioTurno()
        +void registrarFinTurno()
        +Reporte generarReporteTurno()
    }

    class Pasada {
        +int idPasada
        +int idTipoVehiculo
        +DateTime fechaHoraDePasada
        -string pasadaTelepase
        -string pasadaEfectivo
        -string pasadaNoPaga

        +void registrarPasada()
    }

    class TipoVehiculo {
        +int idTipoVehiculo
        +string descripcion
    }

    class HistorialTarifas {
        +int idHistorial
        +int idTipoVehiculo
        +DateTime fechaInicio
        +DateTime fechaFin
        -float tarifa
        +int tarifaActual

        +void actualizarTarifa(float nuevaTarifa)
    }

    class RegistroEfectivo {
        +int idRegistro
        +DateTime fechaHoraDeEmision
        +float importeCobrado
        +string codigoQR
        -int idHistorialTarifas

        +void emitirTicket()
    }

    class RegistroTelepase {
        +int idRegistro
        +DateTime fechaHoraDeEmision
        +float importeCobrado
        -string codigoTelepase
        -string usuario
        -string direccion
        -string patente
        -int tarjetaDebito

        +void registrarPagoTelepase()
    }

    class NoPagados {
        +int idNoPagado
        +string nombreConductor
        +string apellidoConductor
        +string dniConductor
        +DateTime fechaHoraDeEmision

        +void registrarNoPago()
    }

    EstacionDePeaje "1" -- "1..*" TurnoDeTrabajo : "tiene muchos"
    TurnoDeTrabajo "1" -- "1" CasillaDePeaje : "ocurre en una"
    TurnoDeTrabajo "1" -- "1" Operador : "es realizado por"
    TurnoDeTrabajo "1" -- "1..*" Pasada : "tiene muchas"
    Pasada "1" -- "0..1" RegistroEfectivo : "puede ser"
    Pasada "1" -- "0..1" RegistroTelepase : "puede ser"
    Pasada "1" -- "0..1" NoPagados : "puede ser"
    RegistroEfectivo "1" -- "1" HistorialTarifas : "usa"
    RegistroTelepase "1" -- "1" HistorialTarifas : "usa"
    HistorialTarifas "1" -- "1..*" TipoVehiculo : "puede tener"
    NoPagados "1" -- "1" HistorialTarifas : "usa"
